# CGA2024-1

./: CMakeLists.txt  sync.ffs_db
01-AnimacionKeyFrames/src/: main.cpp
01-FRGM/src/: examen.c
03-FRGM_tarea/: .cproject  .project  CMakeLists.txt
03-FRGM_tarea/src/: main.cpp
03-Terrain/src/: main.cpp
04-TerrainBlendMap/src/: main.cpp
05-MultipleLights/src/: main.cpp
06-CameraTPS/src/: main.cpp
07-Colisiones/src/: main.cpp
11-OpenAL/src/: main.cpp
12-ShadowMapping/src/: main.cpp  main_clase.cpp
13-Particulas/src/: main.cpp
Shaders/: multipleLights_ejercicio_mt.fs  terrain_shadow.fs
